# self

./: CMakeLists.txt
vm/: CMakeLists.txt
vm/cmake/: configurations.cmake  cygwin.cmake  functions.cmake  missing_functions.cmake
vm/src/: CMakeLists.txt
vm/src/any/memory/: generation.cpp
vm/src/any/os/: os.cpp
vm/src/unix/os/: CYGWIN_LICENSE  cygwin_profil.c  os_unix.cpp
vm/src/unix/prims/: unixPrims.cpp
